plugins {
    alias libs.plugins.android.application
}

// 將需要 AGP 類別路徑的常數定義在主腳本，避開外部腳本的類別解析問題
ext.apkArtifact = com.android.build.api.artifact.SingleArtifact.APK.INSTANCE

// 應用外部腳本處理版本號與發布邏輯
apply from: '../gradle/scripts/versioning.gradle'

android {
    namespace = 'com.fongmi.android.tv'
    compileSdk libs.versions.compileSdk.get().toInteger()

    flavorDimensions = ["mode", "api", "abi"]

    defaultConfig {
        applicationId "com.fongmi.android.tv"
        minSdk libs.versions.minSdk.get().toInteger()
        targetSdk libs.versions.targetSdk.get().toInteger()
        versionCode autoVersionCode
        versionName autoVersionName

        ndk {
            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
        }

        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString(), "eventBusIndex": "com.fongmi.android.tv.event.EventIndex"]
            }
        }
    }

    productFlavors {
        mobile {
            dimension 'mode'
        }
        java {
            dimension "api"
        }
        python {
            dimension "api"
        }
        arm64_v8a {
            dimension "abi"
            ndk { abiFilters "arm64-v8a" }
        }
        armeabi_v7a {
            dimension "abi"
            ndk { abiFilters "armeabi-v7a" }
        }
        leanback {
            dimension 'mode'
        }
        x86 {
            dimension 'abi'
            ndk { abiFilters "x86" }
        }
        x86_64 {
            dimension 'abi'
        }
    }

    buildFeatures {
        buildConfig = true
        viewBinding = true
    }

    //signingConfigs {
    //    release {
    //        if (file('../../my-release-key.jks').exists()) {
    //            storeFile file('../../my-release-key.jks')
    //            storePassword 'rtyyfg00'
    //            keyAlias 'my-key-alias'
    //            keyPassword 'rtyyfg00'
    //        } else {
    //
    //            storeFile file('debug.keystore')
    //            storePassword 'android'
    //            keyAlias 'androiddebugkey'
    //            keyPassword 'android'
    //        }
    //    }
    //    debug {
    //        storeFile file('../../my-release-key.jks')
    //        storePassword 'rtyyfg00'
    //        keyAlias 'my-key-alias'
    //        keyPassword 'rtyyfg00'
     //   }
    //}


    buildTypes {
        debug {
            signingConfig = signingConfigs.debug
        }
        release {
            minifyEnabled = true
            shrinkResources = true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig = signingConfigs.debug
        }
    }

    packaging {
        jniLibs {
            useLegacyPackaging = false
        }
        resources {
            excludes += ['META-INF/beans.xml']
            excludes += ['META-INF/NOTICE.md']
            excludes += ['META-INF/NOTICE.txt']
            excludes += ['META-INF/NOTICE.markdown']
            excludes += ['META-INF/LICENSE.txt']
            excludes += ['META-INF/LICENSE.md']
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
        coreLibraryDesugaringEnabled = true
    }

    configurations.configureEach {
        resolutionStrategy {
            force 'com.squareup.okhttp3:okhttp:' + libs.versions.okhttp.get()
        }
    }

    lint {
        baseline = file("lint-baseline.xml")
        checkReleaseBuilds false
        abortOnError false
        disable 'UnsafeOptInUsageError'
    }
}

// 應用外部發布邏輯（必須在 android 區塊之後）
apply from: '../gradle/scripts/publishing.gradle'

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.aar'], exclude: ['hook-release.aar'])
    implementation project(':catvod')
    implementation project(':chaquo')
    implementation project(':quickjs')
    implementation project(':youtube')
    implementation project(':hook')

    implementation libs.appcompat
    implementation libs.biometric
    implementation libs.room.runtime
    implementation libs.splashscreen
    implementation libs.customactivityoncrash
    implementation libs.materialdesigncolors
    implementation libs.bundles.glide
    implementation libs.textdrawable
    implementation libs.sardine
    implementation libs.lingver
    implementation libs.material
    implementation libs.cronet.okhttp
    implementation libs.zxing.core
    implementation libs.permissionx
    implementation libs.smbj
    implementation libs.jna
    implementation libs.javax.servlet.api
    implementation libs.cronet.embedded
    implementation libs.bundles.jupnp
    implementation libs.eventbus
    implementation libs.nanohttpd
    implementation libs.gson
    implementation libs.tikxml.core
    implementation libs.tikxml.annotation
    implementation libs.viewpager2
    implementation libs.media3.datasource.okhttp
    implementation libs.media3.datasource.rtmp
    implementation libs.media3.datasource
    implementation libs.media3.exoplayer
    implementation libs.media3.exoplayer.dash
    implementation libs.media3.exoplayer.hls
    implementation libs.media3.exoplayer.rtsp
    implementation libs.media3.exoplayer.smoothstreaming
    implementation libs.media3.session
    implementation libs.media3.ui
    implementation libs.media3.common
    implementation libs.media3.database
    implementation files('libs/commons-net-3.11.1.jar')

    leanbackImplementation libs.leanback
    leanbackImplementation libs.android.file.chooser
    leanbackImplementation libs.androidautosize
    mobileImplementation libs.swiperefreshlayout
    mobileImplementation libs.flexbox
    mobileImplementation libs.zxing.android.embedded

    annotationProcessor libs.room.compiler
    annotationProcessor libs.glide.compiler
    annotationProcessor libs.eventbus.annotation.processor
    annotationProcessor libs.tikxml.processor

    coreLibraryDesugaring libs.desugar
}
